Se eliminan imports usados y variables innecesarias para optimizar memoria